# thaliak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
src/api/: freecompany.rs  linkshell.rs  mod.rs  profile.rs
src/api/endpoints/: err_no_id.rs  freecompany.rs  linkshell.rs  profile.rs
src/api/tests/: mod.rs
src/bot/: mod.rs
src/bot/commands/: lodestone.rs  misc.rs  mod.rs
src/lodestone/: mod.rs
src/lodestone/internal/: common.rs  freecompany.rs  linkshell.rs  mod.rs  profile.rs  selectors.rs
src/lodestone/structs/: freecompany.rs  item.rs  linkshell.rs  mod.rs  profile.rs
src/lodestone/tests/: freecompany.rs  linkshell.rs  mod.rs  profile.rs
