[package]
name = "thaliak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = "*"
derive_builder = "0.12.0"
futures = "0.3.26"
reqwest = "0.11.14"
regex = "1.7.1"
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
simple-cache = "0.2.0"
tokio = { version = "1.25.0", features = ["full"] }
unix-ts = {version = "*", features = ["chrono"]}
utoipa = { version = "3", features = ["actix_extras"] }
