[package]
name = "thaliak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
chrono = "0.4"
derive_builder = "0.12"
futures = "0.3"
reqwest = "0.11"
regex = "1.7"
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity_commands = { git = "https://github.com/acdenisSK/serenity_commands.git" }
simple-cache = "0.2"
tokio = { version = "1.25", features = ["full"] }
unix-ts = {version = "0.4", features = ["chrono"]}
utoipa = { version = "3", features = ["actix_extras"] }
